Overhaul of solar radiation calculation
Changes in inputs:
  - `climate.in`: remove `atmospheric transmissivity` because they were unused
  - `siteparam.in`: site latitude, slope, and aspect are now in consistent units (degrees) instead of a mix of radians and degrees
  - `siteparam.in`: orientation of aspect has changed: aspect = 0 indicates now a South facing slope instead of a North facing slope; values range -180 to +180 instead of 0-360

Changes in flow of calculations:
  - `petfunc()` that calculates PET takes now radiation as input argument instead of calculating it internally --> move calculation of radiation to the `SW_Flow` module

Changes in the calculation of extraterrestrial radiation:
  - function renamed to `solar_radiation_extraterrestrial()` from `solar_radiation_TOA()`
  - accounts now for varying sun-earth distance with new function `sun_earth_distance_squaredinverse()`
  - improved `solar_declination()` to better match calendar year to solar year
  - extraterrestrial radiation is now calculated both for a horizontal and a tilted surface (defined by slope and aspect)
--> future improvements: these calculations are repeated for each year, but values are the same per day of year -> these could be calculated only once and memoized

Changes in the calculation of global horizontal radiation:
  - previous function `solar_radiation_surface()` replaced by new functions `clearsky_directbeam()`, `clearnessindex_diffuse()`, and `atmospheric_attenuation_cloudfactor()`
  - new approach implements a clear-sky model (additionally attenuated by a cloud factor) and a separation model to treat direct beam and diffuse radiation separately

Changes in the calculation of tilted radiation:
  - previous function `_solar_radiation_sloped()` replaced, enhanced, and fixed by new function `sun_hourangles()`
  - new function `sun_hourangles()` calculates all possible sunrise and sunset hour angles for a horizontal and a tilted surface as well as the daily integral of the cos

--- a/testing/Input/siteparam.in
+++ b/testing/Input/siteparam.in
@@ -53,10 +53,10 @@
 1.1		# range
 
 #---- Site location and topography
-0.681		# latitude of the site in radians
+39.59		# latitude of the site in degrees
 1000		# elevation of site (m a.s.l.)
-0		# slope at site (degrees): no slope = 0
--1		# aspect at site (degrees): N=0, E=90, S=180, W=270, no slope:-1
+0		# slope at site (degrees): no slope = 0, vertical = 90
+999		# aspect at site (degrees): S=0, E=-90, N=±180, W=90; ignored if slope = 0 or aspect = 999
 
 #---- Soil temperature
 # from Parton 1978, ch. 2.2.2 Temperature-profile Submodel
