--- a/testing/Input/weathsetup.in
+++ b/testing/Input/weathsetup.in
@@ -7,8 +7,10 @@
 
 
 #--- Activate/deactivate weather generator / historical daily weather inputs
-0			# 0 = use historical data only; 1 = use markov process for missing weather
-1980			# first year to begin historical weather
+0			# 0 = use historical data only
+			# 1 = use weather generator for (partially) missing weather inputs
+			# 2 = use weather generator for all weather (don't check weather inputs)
+1980	# first year to begin historical weather
 			# (filename, e.g., Input/data_weather/weath.1949; see `files.in` for
 			# relative pathname and basis of filename)
 5			# number of days to use in a moving average of temperature
