--- a/testing/Input/weathsetup.in
+++ b/testing/Input/weathsetup.in
@@ -10,9 +10,8 @@
 0			# 0 = use historical data only
 			# 1 = use weather generator for (partially) missing weather inputs
 			# 2 = use weather generator for all weather (don't check weather inputs)
-1980	# first year to begin historical weather
-			# (filename, e.g., Input/data_weather/weath.1949; see `files.in` for
-			# relative pathname and basis of filename)
+-1		# first year to begin historical weather
+			# if -1, then use first year of simulation (see `years.in`)
 
 
 #--- Monthly scaling parameters:
