Add site longitude to `siteparam` inputs for documentation
- longitude is currently not used by the simulation (whereas latitude is)
- however, documenting complete location maybe be useful for later re-identification of the location of a run

--- a/testing/Input/siteparam.in
+++ b/testing/Input/siteparam.in
@@ -53,7 +53,9 @@
 1.1		# range
 
 #---- Site location and topography
-39.59		# latitude of the site in degrees
+-105.58	# longitude of the site in degrees (W < 0; E > 0)
+				# (currently not used by simulation, but useful for site documentation)
+39.59		# latitude of the site in degrees (N > 0; S < 0)
 1000		# elevation of site (m a.s.l.)
 0		# slope at site (degrees): no slope = 0, vertical = 90
 999		# aspect at site (degrees): S=0, E=-90, N=±180, W=90; ignored if slope = 0 or aspect = 999
