New make target "compiler_version"
- print CC and CXX compiler version information as seen by make
- added to travis-ci, appveyor-ci, and tools/check_SOIILWAT2.sh

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,8 @@ install:
 # Note: appveyor doesn't have sanitizers -> cannot run *_severe test targets
 build_script:
   - set PATH=%PATH%;c:\cygwin\bin
+  # print compiler versions as seen by make
+  - make compiler_version
   # compile and run optimized binary
   - make clean bin bint_run
   # compile and run debug binary
