--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,8 @@ before_install:
 
 
 script:
+  # print compiler versions as seen by make
+  - make compiler_version
   # compile and run optimized binary
   - make clean bin bint_run
   # compile and run (severe) debug binary and unit tests with sanitizers
