Update submodule googletest
- the default branch name is now "main"; see https://github.com/google/googletest/issues/3663

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "googletest"]
 	path = googletest
 	url = https://github.com/google/googletest
-	branch = master
+	branch = main
 [submodule "pcg"]
 	path = pcg
 	url = https://github.com/imneme/pcg-c-basic
