github actions: fix ubunto `runner.os` value
- `runner.os` is apparently 'Linux' and not 'ubuntu' when matrix runs for "ubuntu-latest"

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,11 +47,11 @@ jobs:
       run: ASAN_OPTIONS=detect_leaks=1:strict_string_checks=1:detect_stack_use_after_return=1:check_initialization_order=1:strict_init_order=1 LSAN_OPTIONS=suppressions=.LSAN_suppr.txt make clean test_severe test_run
       
     - name: Generate coverage report (ubuntu)
-      if: ${{ runner.os == 'ubuntu' && success() }}
+      if: ${{ runner.os == 'Linux' && success() }}
       run: make clean cov test_run
 
     - name: Upload coverage to Codecov (ubuntu)
-      if: ${{ runner.os == 'ubuntu' && success() }}
+      if: ${{ runner.os == 'Linux' && success() }}
       uses: codecov/codecov-action@v2
       with:
         fail_ci_if_error: false # just report, don't fail checks
