github actions: create coverage reports
- codecov retires the bash uploaded by Feb 1, 2022 (https://docs.codecov.com/docs/about-the-codecov-bash-uploader) which used to create coverage reports
--> I believe this means that we need to `make cov_run` instead of `make test_run`...?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       
     - name: Generate coverage report (ubuntu)
       if: ${{ runner.os == 'Linux' && success() }}
-      run: make clean cov test_run
+      run: make clean cov cov_run
 
     - name: Upload coverage to Codecov (ubuntu)
       if: ${{ runner.os == 'Linux' && success() }}
