--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -25,6 +25,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
+        
+    - name: Install cygwin (windows)
+      uses: cygwin/cygwin-install-action@v1
       
     - name: Print compiler versions as seen by make
       run: make compiler_version
@@ -55,3 +58,44 @@ jobs:
       uses: codecov/codecov-action@v2
       with:
         fail_ci_if_error: false # just report, don't fail checks
+        
+        
+  build_Windows_Cygwin:
+    # see https://github.com/cygwin/cygwin-install-action
+    # based on https://github.com/resurrecting-open-source-projects/scrot
+    
+    runs-on: windows-latest
+    env:
+      CYGWIN_NOWINPATH: 1 # Removes non-Cygwin dirs from PATH.
+      CHERE_INVOKING: '' # Makes Cygwin's `bash.exe --login` not cd.
+    defaults:
+      run:
+        shell: C:\cygwin\bin\bash.exe --login -eo pipefail -o igncr {0}
+
+    steps:
+    - run: git config --global core.autocrlf input
+      shell: bash
+
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+        
+    - name: Install cygwin (windows)
+      uses: cygwin/cygwin-install-action@v1
+      with:
+        packages: gcc-core make
+      
+    - name: Print compiler versions as seen by make
+      run: make compiler_version
+    
+    - name: Run binary
+      run: |
+        make clean bin bint_run
+        make clean bin_debug_severe bint_run
+
+    - name: Unit tests
+      run: make clean test test_run
+        
+    - name: Severe unit tests (without sanitizers)
+      run: make clean test_severe test_run
