github actions: attempt to fix cygwin
- cygwin action fails with
```
Run make compiler_version
  make compiler_version
  shell: C:\cygwin\bin\bash.exe --login -eo pipefail -o igncr {0}
  env:
    CYGWIN_NOWINPATH: 1
    CHERE_INVOKING: 
make: *** No rule to make target 'compiler_version'.  Stop.
```

suggesting that `make` cannot find the `makefile` (which could be caused by not being in the correct directory, see https://github.com/cygwin/cygwin-install-action)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,8 @@ jobs:
     
     runs-on: windows-latest
     env:
-      CYGWIN_NOWINPATH: 1 # Removes non-Cygwin dirs from PATH.
-      CHERE_INVOKING: '' # Makes Cygwin's `bash.exe --login` not cd.
-    defaults:
+      CYGWIN_NOWINPATH: 1 # only have cygwin's executables on PATH
+      CHERE_INVOKING: 1 # prevent profile script to change directory
       run:
         shell: C:\cygwin\bin\bash.exe --login -eo pipefail -o igncr {0}
 
