github actions: fix cygwin build
- previous commit forgot to set "defaults:" keyword when defining the default shell to run build steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,7 @@ jobs:
     env:
       CYGWIN_NOWINPATH: 1 # only have cygwin's executables on PATH
       CHERE_INVOKING: 1 # prevent profile script to change directory
+    defaults:
       run:
         shell: C:\cygwin\bin\bash.exe --login -eo pipefail -o igncr {0}
 
