github actions: add g++ for cygwin
- the development should have been on a dedicated branch instead of on master since the start ...!
- add g++ for cygwin build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
     branches:
       - master
+      - feature_ghactions_v2
 
 jobs:
   build:
@@ -81,7 +82,7 @@ jobs:
     - name: Install cygwin (windows)
       uses: cygwin/cygwin-install-action@v1
       with:
-        packages: gcc-core make
+        packages: gcc-core gcc-g++ make
       
     - name: Print compiler versions as seen by make
       run: make compiler_version
