--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
-      
+
     - name: Print compiler versions as seen by make
       run: make compiler_version
-    
+
     - name: Run binary
       run: |
         make clean bin bint_run
@@ -37,16 +37,16 @@ jobs:
 
     - name: Unit tests
       run: make clean test test_run
-        
+
     - name: Severe unit tests (without sanitizers)
       if: ${{ runner.os == 'macOS' }}
       run: make clean test_severe test_run
-      
+
     - name: Severe unit tests (with sanitizers)
       # Apple clang does not support "AddressSanitizer: detect_leaks" (at least as of clang-1200.0.32.29)
       if: ${{ runner.os != 'macOS' }}
       run: ASAN_OPTIONS=detect_leaks=1:strict_string_checks=1:detect_stack_use_after_return=1:check_initialization_order=1:strict_init_order=1 LSAN_OPTIONS=suppressions=.LSAN_suppr.txt make clean test_severe test_run
-      
+
     - name: Generate coverage report (ubuntu)
       if: ${{ runner.os == 'Linux' && success() }}
       run: make clean cov cov_run
@@ -56,12 +56,12 @@ jobs:
       uses: codecov/codecov-action@v2
       with:
         fail_ci_if_error: false # just report, don't fail checks
-        
-        
+
+
   build_Windows_Cygwin:
     # see https://github.com/cygwin/cygwin-install-action
     # based on https://github.com/resurrecting-open-source-projects/scrot
-    
+
     runs-on: windows-latest
     env:
       CYGWIN_NOWINPATH: 1 # only have cygwin's executables on PATH
@@ -78,22 +78,18 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
-        
+
     - name: Install cygwin (windows)
       uses: cygwin/cygwin-install-action@v1
       with:
         packages: gcc-core gcc-g++ make
-      
+
     - name: Print compiler versions as seen by make
       run: make compiler_version
-    
+
+    # AddressSanitizer and LeakSanitizer not available on cygwin
     - name: Run binary
-      run: |
-        make clean bin bint_run
-        make clean bin_debug_severe bint_run
+      run: make clean bin bint_run
 
     - name: Unit tests
       run: make clean test test_run
-        
-    - name: Severe unit tests (without sanitizers)
-      run: make clean test_severe test_run
