--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: SOILWAT2 C/C++ CI
 
-#TODO: add gcc and clang versions
-#TODO: add doxygen documentation check
+#TODO: run unit tests with different compiler versions of both gcc and clang
 
 on:
   push:
@@ -12,7 +11,7 @@ on:
       - master
 
 jobs:
-  build:
+  build_nix:
 
     strategy:
       fail-fast: false
@@ -46,15 +45,32 @@ jobs:
       if: ${{ runner.os != 'macOS' }}
       run: ASAN_OPTIONS=detect_leaks=1:strict_string_checks=1:detect_stack_use_after_return=1:check_initialization_order=1:strict_init_order=1 LSAN_OPTIONS=suppressions=.LSAN_suppr.txt make clean test_severe test_run
 
-    - name: Generate coverage report (ubuntu)
-      if: ${{ runner.os == 'Linux' && success() }}
+
+  check_code_coverage:
+    runs-on: ubuntu-latest
+    needs: build_nix
+    
+    steps:
+    - name: Generate coverage report
       run: make clean cov cov_run
 
-    - name: Upload coverage to Codecov (ubuntu)
-      if: ${{ runner.os == 'Linux' && success() }}
+    - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
         fail_ci_if_error: false # just report, don't fail checks
+
+
+  check_documentation:
+    runs-on: ubuntu-latest
+    needs: build_nix
+    
+    steps:
+    - name: Install doxygen 
+      run: |
+        sudo apt-get update
+        sudo apt-get install doxygen
+    - name: Build documentation and check for warnings
+      run: make doc
 
 
   build_Windows_Cygwin:
