--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,9 +48,13 @@ jobs:
 
   check_code_coverage:
     runs-on: ubuntu-latest
-    needs: build_nix
     
     steps:
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+
     - name: Generate coverage report
       run: make clean cov cov_run
 
@@ -62,15 +66,20 @@ jobs:
 
   check_documentation:
     runs-on: ubuntu-latest
-    needs: build_nix
-    
+
     steps:
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+        
     - name: Install doxygen 
       run: |
         sudo apt-get update
         sudo apt-get install doxygen
+        
     - name: Build documentation and check for warnings
-      run: make doc
+      run: make clean doc
 
 
   build_Windows_Cygwin:
