New inputs to select SWRC/PDF and (optionally) SWRC parameter values
- `siteparam.in` gains two new inputs: "swrc_name" and "pdf_name"
- if "pdf_name" is "NoPDF", then a new file `swrc_params.in` must be provided with parameter values instead

-> new `SW_SWRC_read()` to read the new file `swrc_params.in`
-> `files.in` is updated to hold path of new file `swrc_params.in`
-> `SW_SIT_read()` is updated to read in "swrc_name" and "pdf_name" (they are stored into "site_*" and translated to internal codes), and later (by `SW_SIT_init_run()`) copied to soil layers

--- a/testing/Input/siteparam.in
+++ b/testing/Input/siteparam.in
@@ -83,6 +83,32 @@ NAN			# aspect = surface azimuth angle (degrees): S=0, E=-90, N=±180, W=90;
 # Name of CO2 scenario: see input file `carbon.in`
 RCP85
 
+
+#--- Soil water retention curve (SWRC) ------
+#
+# Implemented options (`swrc_name`/`pdf_name`, see `swrc2str[]`/`pdf2str[]`):
+#   - pdf_name = "NoPDF": parameters for any SWRC obtained from
+#     input file ("swrc_params.in") instead of estimated from PDF
+#   - swrc_name = "Campbell1974": (Campbell 1974)
+#     * pdf_name = "Cosby1984AndOthers": PDFs by Cosby et al. 1984
+#       (but Saxton et al. 2006 for `swc_sat` and Rawls et al. 1985 for `swc_min`)
+#     * pdf_name = "Cosby1984": PDFs by Cosby et al. 1984
+#       (including `swc_sat` and `swc_min` = 0)
+#   - swrc_name = "vanGenuchten1980": van Genuchten-Mualem (van Genuchten 1980)
+#     * pdf_name = "Rosetta3": not implemented in C (but see rSOILWAT2)
+#   - swrc_name = "BrooksCorey1964": (Brooks and Corey 1964)
+#     * pdf_name: currently, no implemented PDF (but see rSOILWAT2)
+#   - swrc_name = "Brunswick": (Weber et al. 2019)
+#     * pdf_name: currently, no implemented PDF (but see rSOILWAT2)
+#   - swrc_name = "FXW": (Fredlund and Xing 1994, Wang et al. 2018, Rudiyanto et al. 2020)
+#     * pdf_name: currently, no implemented PDF (but see rSOILWAT2)
+#
+# Note: option "Campbell1974"/"Cosby1984AndOthers" was hard-coded < v7.0.0
+#
+Campbell1974	# Select one of the implemented SWRCs
+Cosby1984AndOthers	# Select one of the implemented PDFs (or "NoPDF")
+
+
 #---- Transpiration regions
 # ndx  : 1=shallow, 2=medium, 3=deep, 4=very deep
 # layer: deepest soil layer number of the region.
