--- a/testing/Input/swrc_params.in
+++ b/testing/Input/swrc_params.in
@@ -6,10 +6,16 @@
 #     selected SWRC (see `siteparam.in`)
 #   - unused columns are ignored (if selected SWRC uses fewer than 6 parameters)
 
-# swrc = "Campbell1974"
+# swrc = "Campbell1974" (default values below)
 #   * param1 = "saturation" soil water matric potential [-bar]
 #   * param2 = saturated volumetric water content for the matric component [cm/cm]
 #   * param3 = b, slope of the linear log-log retention curve [-]
+
+# swrc = "vanGenuchten1980"
+#   * param1 = residual volumetric water content for the matric component [cm/cm]
+#   * param2 = saturated volumetric water content for the matric component [cm/cm]
+#   * param3 = alpha, related to the inverse of air entry suction [cm-1]
+#   * param4 = n, measure of the pore-size distribution [-]
 
 # param1  param2   param3   param4   param5   param6
 18.6080  0.42703   5.3020   0.0000   0.0000   0.0000
