--- a/testing/Input/swrc_params.in
+++ b/testing/Input/swrc_params.in
@@ -7,7 +7,7 @@
 #   - unused columns are ignored (if selected SWRC uses fewer than 6 parameters)
 
 # swrc = "Campbell1974" (default values below)
-#   * param1 = "saturation" soil water matric potential [-bar]
+#   * param1 = air-entry suction [cm]
 #   * param2 = saturated volumetric water content for the matric component [cm/cm]
 #   * param3 = b, slope of the linear log-log retention curve [-]
 
