R-script to visualize patterns of temperature at surface and throughout the soil
- run SOILWAT2 with the "testing" example and visualize the output:
```
make clean bin bint_run
Rscript tools/plot__SW2_SoilTemperature.R
```

-> four PDFs are created in `tools/`

- updated `.gitignore` excludes the PDF figures as they are intended for local use

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 /testing/Output/*
 /testing/Output_*
 
+# Figures created by scripts in tools/
+/tools/Fig*
+/tools/*.pdf
+
 # Google unit test output
 gtest-*.o
 libgtest.a
