New SWRC: FXW (Fredlund-Xing-Wang)
- N_SWRCs and N_PDFs increased each by one
- `swrc2str[]` and `pdf2str[]` updated with "FXW" and "neuroFX2021" (PDF will be implemented in rSOILWAT2)
- new `SWRC_check_parameters_for_FXW()` to validate parameter values of FXW
- new `SWRC_SWCtoSWP_FXW()` to translate moisture content to water potential
    * There is no inverse of FWX --> implemented bracketing algorithm "interpolate, truncate, project" (ITP) to estimate phi from theta with new `itp_FXW_for_phi()`
- new `SWRC_SWPtoSWC_FXW()` to translate water potential to moisture content
    * new bare-bones version `FXW_phi_to_theta()`

- updated "wrapper" functions to incorporate FXW: `check_SWRC_vs_PDF()`, `SWRC_check_parameters()`, `SW_swcBulk_minimum()`, `SW_swcBulk_saturated()`, `SWRC_SWCtoSWP()` where theta = 0 is no allowed, `SWRC_SWPtoSWC()`

- `swE` macro defining Euler's constant - used by FXW
- `FXW_h0` and `FXW_hr` macros defining FXW constants

- expanded unit tests to incorporate FXW

--- a/testing/Input/siteparam.in
+++ b/testing/Input/siteparam.in
@@ -95,12 +95,12 @@ RCP85
 #     * pdf_name = "Cosby1984": PDFs by Cosby et al. 1984
 #   - swrc_name = "vanGenuchten1980": van Genuchten-Mualem (van Genuchten 1980)
 #     * pdf_name = "Rosetta3": not implemented in C (but see rSOILWAT2)
-#   - swrc_name = "BrooksCorey1964": (Brooks and Corey 1964)
-#     * pdf_name: currently, no implemented PDF (but see rSOILWAT2)
-#   - swrc_name = "Brunswick": (Weber et al. 2019)
-#     * pdf_name: currently, no implemented PDF (but see rSOILWAT2)
-#   - swrc_name = "FXW": (Fredlund and Xing 1994, Wang et al. 2018, Rudiyanto et al. 2020)
-#     * pdf_name: currently, no implemented PDF (but see rSOILWAT2)
+##   - swrc_name = "BrooksCorey1964": (Brooks and Corey 1964)
+##     * pdf_name: currently, no implemented PDF
+##   - swrc_name = "Brunswick": (Weber et al. 2019)
+##     * pdf_name: currently, no implemented PDF
+#   - swrc_name = "FXW": (Fredlund and Xing 1994, Wang et al. 2018)
+#     * pdf_name: "neuroFX2021": not implemented PDF in C (but see rSOILWAT2)
 #
 # Note: option "Campbell1974"/"Cosby1984AndOthers" was hard-coded < v7.0.0
 #
