--- a/testing/Input/swrc_params.in
+++ b/testing/Input/swrc_params.in
@@ -19,6 +19,15 @@
 #   * param4 = n, measure of the pore-size distribution [-]
 #   * param5 = saturated hydraulic conductivity [cm/day]
 
+# swrc = "FXW"
+#   * param1 = saturated volumetric water content of the matric component [cm/cm]
+#   * param2 = alpha, shape parameter [cm-1]
+#   * param3 = n, shape parameter [-]
+#   * param4 = m, shape parameter [-]
+#   * param5 = saturated hydraulic conductivity [cm / day]
+#   * param6 = L, tortuosity/connectivity parameter [-]
+
+
 # param1  param2   param3   param4     param5   param6
 18.6080  0.42703   5.3020   24.03047   0.0000   0.0000
 20.4644  0.43290   7.0500   14.94351   0.0000   0.0000
