--- a/testing/Input/veg.in
+++ b/testing/Input/veg.in
@@ -8,6 +8,9 @@
 #       describe the four available vegetation types and should not be
 #       modified unless a vegetation type itself is altered.
 
+#---- Flag to activate/deactivate estimating vegetation based off weather
+1	# 0 - Read in the values from file
+ 	# 1 - Estimate vegetation from weather
 
 #---- Composition of vegetation type components (0-1; must add up to 1)
 #	Grasses	Shrubs	Trees	Forbs	BareGround
