--- a/testing/Input/weathsetup.in
+++ b/testing/Input/weathsetup.in
@@ -10,6 +10,7 @@
 0			# 0 = use historical data only
 			# 1 = use weather generator for (partially) missing weather inputs
 			# 2 = use weather generator for all weather (don't check weather inputs)
+			# 3 = impute missing temperature with LOCF and missing precipitation as 0
 -1		# first year to begin historical weather
 			# if -1, then use first year of simulation (see `years.in`)
 
