Specify type of soil density inputs
- close #280 (Soil density: input either for < 2 mm fraction or for whole soil)

- `SW_SITE` gains `type_soilDensityInput` to encode whether soil density inputs represent matric soil density or bulk soil density
-> user inputs change `siteparam.in`: new input for `type_soilDensityInput`

- `SW_LAYER_INFO` gains new `soilDensityInput` to store soil density inputs (inputs were previously stored as `soilMatric_density`)

- new `calculate_soilMatricDensity()` to calculate matric density from bulk density

- `SW_SIT_init_run()` now determines both matric soil density and bulk soil density from `soilDensityInput` depending on  `type_soilDensityInput`

- `set_soillayers()` now expects bulk density inputs as `bd` instead of matric density `matricd`

-> previous behavior: input soil density was treated as matric density and converted to bulk density (however, most of the time real word inputs represent bulk density)

--- a/testing/Input/siteparam.in
+++ b/testing/Input/siteparam.in
@@ -83,6 +83,10 @@ NAN			# aspect = surface azimuth angle (degrees): S=0, E=-90, N=±180, W=90;
 # Name of CO2 scenario: see input file `carbon.in`
 RCP85
 
+# --- Soil characterization ---
+# Are inputs of density representing bulk soil (type 1) or the matric component (type 0)?
+0
+
 #---- Transpiration regions
 # ndx  : 1=shallow, 2=medium, 3=deep, 4=very deep
 # layer: deepest soil layer number of the region.
