New `has_swrcp` and eliminate "NoPDF"
- concern: the same variable `pdf_name` attempted to encode both (i) the name of the pedotransfer function and (ii) the information whether `SWRCp` values should be estimated during run-time or not
* previously, the value "NoPDF" informed SOILWAT2 that `SWRCp` was not to be estimated during run-time
* issue: once `pdf_name` was set to "NoPDF", SOILWAT2 and downstream applications lost all information about the utilized pedotransfer function, e.g.,
** SOILWAT2 couldn't properly determine saturated water content for Campbell1974/Cosby1984AndOthers
** downstream applications couldn't use the selected pedotransfer function for additional estimation of `SWRCp`

-> separate the two types of information: keep `pdf_name` (eliminate "NoPDF") and add new `has_swrcp`
- `site_has_swrcp` is a new user input from "siteparam.in"
* 0: Estimate with specified pedotransfer function
* 1: Use values from "swrc_params.in"

-> this approach allows to pass values for `pdf_name` that are not implemented as long as `SWRCp` are provided (and `site_has_swrcp` set to TRUE)

-> this approach eliminate the need that SOILWAT2 includes the pedotransfer functions implemented by rSOILWAT2; this simplifies several elements and functions including:
* `pdf2str`
* `SWRC_PDF_estimate_parameters()`
* `check_SWRC_vs_PDF()`

-> increase readability of switch-statements that select SWRC or PDF: new macros that encode indices for each implemented SWRC and PDF

-> update unit tests
* simplified `pdf_name` start now at index 0
* only check those PDFs implemented in SOILWAT2
* utilize new `site_has_swrcp`

--- a/testing/Input/swrc_params_FXW.in
+++ b/testing/Input/swrc_params_FXW.in
@@ -6,7 +6,7 @@
 #     selected SWRC (see `siteparam.in`)
 #   - unused columns are ignored (if selected SWRC uses fewer than 6 parameters)
 
-# swrc = "FXW"
+# swrc = "FXW" (values below, from "neuroFX2021")
 #   * param1 = saturated volumetric water content of the matric component [cm/cm]
 #   * param2 = alpha, shape parameter [cm-1]
 #   * param3 = n, shape parameter [-]
