--- a/testing/Input/siteparam.in
+++ b/testing/Input/siteparam.in
@@ -9,7 +9,10 @@
 
 
 #---- Soil water content initialization, minimum, and wet condition
--1.0		# swc_min : cm/cm if 0 - <1.0, -bars if >= 1.0.; if < 0. then estimate residual water content for each layer
+-1.0		# swc_min : cm/cm if 0 - <1.0,
+				# 					-bars if >= 1.0.;
+				#						if < 0. then estimate residual water content for each layer
+				#										(from realistic SWP limit, or Rawls et al. 1985)
 15.0		# swc_init: cm/cm if < 1.0, -bars if >= 1.0.
 15.0		# swc_wet : cm/cm if < 1.0, -bars if >= 1.0.
 
@@ -87,25 +90,23 @@ RCP85
 #--- Soil water retention curve (SWRC) ------
 #
 # Implemented options (`swrc_name`/`pdf_name`, see `swrc2str[]`/`pdf2str[]`):
-#   - pdf_name = "NoPDF": SWRC parameters from input file "swrc_params.in"
-#   - swrc_name = "Campbell1974": (Campbell 1974)
-#     * pdf_name = "Cosby1984AndOthers": PDFs by Cosby et al. 1984
-#       (but `swc_sat` by Saxton et al. 2006,
-#       `swc_min` by user input, realistic SWP limit, or Rawls et al. 1985)
-#     * pdf_name = "Cosby1984": PDFs by Cosby et al. 1984
-#   - swrc_name = "vanGenuchten1980": van Genuchten-Mualem (van Genuchten 1980)
-#     * pdf_name = "Rosetta3": not implemented in C (but see rSOILWAT2)
-##   - swrc_name = "BrooksCorey1964": (Brooks and Corey 1964)
-##     * pdf_name: currently, no implemented PDF
-##   - swrc_name = "Brunswick": (Weber et al. 2019)
-##     * pdf_name: currently, no implemented PDF
-#   - swrc_name = "FXW": (Fredlund and Xing 1994, Wang et al. 2018)
-#     * pdf_name: "neuroFX2021": not implemented PDF in C (but see rSOILWAT2)
+#   - pdf_name = <other>: SWRC parameters must be provided via "swrc_params.in"
+#   - swrc_name = "Campbell1974" (Campbell 1974)
+#     * pdf_name = "Cosby1984AndOthers" (Cosby et al. 1984 but `swc_sat` by Saxton et al. 2006)
+#     * pdf_name = "Cosby1984" (Cosby et al. 1984)
+#   - swrc_name = "vanGenuchten1980" (van Genuchten 1980)
+#   - swrc_name = "FXW" (Fredlund and Xing 1994, Wang et al. 2018)
 #
 # Note: option "Campbell1974"/"Cosby1984AndOthers" was hard-coded < v7.0.0
-#
-Campbell1974	# Select one of the implemented SWRCs
-Cosby1984AndOthers	# Select one of the implemented PDFs (or "NoPDF")
+# Note: `rSOILWAT2` may implement additional PDFs
+
+Campbell1974				# Specify soil water retention curve
+Cosby1984AndOthers	# Specify pedotransfer function
+										# (if not implemented, then provide SWRC parameters via "swrc_params.in")
+
+0			# Has SWRC parameters (see `has_swrcp`)?
+			#    0: Estimate with specified pedotransfer function
+			#    1: Use values from "swrc_params.in"
 
 
 #---- Transpiration regions
