--- a/testing/Input/swrc_params.in
+++ b/testing/Input/swrc_params.in
@@ -6,7 +6,7 @@
 #     selected SWRC (see `siteparam.in`)
 #   - unused columns are ignored (if selected SWRC uses fewer than 6 parameters)
 
-# swrc = "Campbell1974" (default values below)
+# swrc = "Campbell1974" (default values below, from "Cosby1984")
 #   * param1 = air-entry suction [cm]
 #   * param2 = saturated volumetric water content for the matric component [cm/cm]
 #   * param3 = b, slope of the linear log-log retention curve [-]
