--- a/testing/Input/veg.in
+++ b/testing/Input/veg.in
@@ -8,9 +8,9 @@
 #       describe the four available vegetation types and should not be
 #       modified unless a vegetation type itself is altered.
 
-#---- Flag to activate/deactivate estimating vegetation based off weather
-1	# 0 - Read in the values from file
- 	# 1 - Estimate vegetation from weather
+#---- Select method for vegetation parameters
+0	# 0 - Read in the values from file
+ 	# 1 - Estimate fixed vegetation composition (fractional cover) from long-term climate conditions
 
 #---- Composition of vegetation type components (0-1; must add up to 1)
 #	Grasses	Shrubs	Trees	Forbs	BareGround
