A fixed mistake within `veg.in`
- The program tries to read a line of text that is not commented out, so it is interpreting it as values for vegetation type values, causing an error

--- a/testing/Input/veg.in
+++ b/testing/Input/veg.in
@@ -11,7 +11,7 @@
 #---- Select method for vegetation parameters
 0	# 0 - Use values from this file
  	# 1 - Estimate vegetation composition from long-term climate conditions
- 	      (values for other vegetation parameters from this file)
+ 	#     (values for other vegetation parameters from this file)
 
 #---- Composition of vegetation type components (0-1; must add up to 1)
 #	Grasses	Shrubs	Trees	Forbs	BareGround
