--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -61,3 +61,4 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         fail_ci_if_error: false # just report, don't fail checks
+        token: ${{ secrets.CODECOV_TOKEN }}
