Re-organize repository (part 2)
- addressing #89

- update file paths (see previous commit 90b17413fee14aa61193e66ebb5757aae5cded63 "Re-organize repository (part 1)"

- note: additional commits to complete #89 will need to update makefile and scripts

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,9 @@ doc/html/*
 doc/log_doxygen.log
 doc/Doxyfile.bak
 
-# Binary files
+# Build and binary directories and files
+bin/*
+build/*
 SOILWAT2
 tests/example/SOILWAT2
 libSOILWAT2*
