Re-organize repository (part 3)
- address #89

- update makefiles, scripts, and continuous integration setup

(see previous commit 90b17413fee14aa61193e66ebb5757aae5cded63 "Re-organize repository (part 1)"
(see previous commit dc521a4a5036c964503a99891337e15b1fe21af6 "Re-organize repository (part 2)"

--- a/.github/workflows/check_doc.yml
+++ b/.github/workflows/check_doc.yml
@@ -24,4 +24,4 @@ jobs:
         sudo apt-get install doxygen doxygen-latex graphviz
 
     - name: Build documentation and check for warnings
-      run: make clean doc
+      run: make clean clean_doc doc
