--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -29,20 +29,20 @@ jobs:
 
     - name: Run binary
       run: |
-        make clean bin bint_run
-        make clean bin_debug_severe bint_run
+        make clean bin_run
+        make clean bin_debug_severe
 
     - name: Unit tests
-      run: make clean test test_run
+      run: make clean test_run
 
     - name: Severe unit tests (without sanitizers)
       if: ${{ runner.os == 'macOS' }}
-      run: make clean test_severe test_run
+      run: make clean test_severe
 
     - name: Severe unit tests (with sanitizers)
       # Apple clang does not support "AddressSanitizer: detect_leaks" (at least as of clang-1200.0.32.29)
       if: ${{ runner.os != 'macOS' }}
-      run: ASAN_OPTIONS=detect_leaks=1:strict_string_checks=1:detect_stack_use_after_return=1:check_initialization_order=1:strict_init_order=1 LSAN_OPTIONS=suppressions=.LSAN_suppr.txt make clean test_severe test_run
+      run: make clean test_leaks
 
 
   check_code_coverage:
@@ -55,7 +55,7 @@ jobs:
         submodules: recursive
 
     - name: Generate coverage report
-      run: make clean cov cov_run
+      run: CC=gcc CXX=g++ GCOV=gcov make clean clean_cov cov
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
