Fixed typos within `_read_weather_hist()` and `weathsetup.in`
- Previously, the equation for calculating actual vapor pressure based on specific humidity was incorrect, "yearWeather->temp_avg[doy] + 243.5" is supposed to be in the exponent
- Relative humidity is treated from [0, 100] % not [0, 1] %, so a call to `min()` was corrected to expect 100%
- Wind component flags in "weathsetup.in" mentioned "westward" and "eastward" instead of the correct "westward" and "northward" descriptions

--- a/tests/example/Input/weathsetup.in
+++ b/tests/example/Input/weathsetup.in
@@ -34,7 +34,7 @@
 0			# Cloud cover [%]
 0			# Wind speed [m/s]
 0			# Wind speed eastward component [m/s]
-0			# Wind speed westward component [m/s]
+0			# Wind speed northward component [m/s]
 0			# Relative humidity [%]
 0			# Maximum relative humidity [%]
 0			# Minimum relative humidity [%]
