Weather misc: input file, weather flag crash, and updated doc
- Updated description for downward shortwave radiation in weather setup file, "weathsetup.in"
- Updated function documentation for `generageMissingWeather()` to now include mention of new variables that make use of "LOCF" (weather generator method = 1)
- `checkAllWeather()` was revoked of its ability to crash the program if any of the max/min temp or precipitation flags are turned off, `SW_WTH_setup()` gains this since it's the most immediate location to crash under these conditions

--- a/tests/example/Input/weathsetup.in
+++ b/tests/example/Input/weathsetup.in
@@ -41,8 +41,7 @@
 0			# Specific humidity [%]
 0			# Dew point temperature [C]
 0			# Actual vapor pressure [kPa]
-0			# Downward surface shortwave radiation [MJ/day]
-
+0			# Downward surface shortwave radiation [W/m2], i.e., flux density for a (hypothetical) flat horizon averaged over the daylight period of the day
 
 #--- Monthly scaling parameters:
 # Month 1 = January, Month 2 = February, etc.
