New input: description of radiation inputs
- new `desc_rsds` with
    * 0: `rsds` represents daily global horizontal irradiation [MJ / m2]
    * 1: `rsds` represents flux density [W / m2] for a
      (hypothetical) flat horizon averaged over an entire day (24 hour period)
    * 2: `rsds` represents flux density [W / m2] for a
      (hypothetical) flat horizon averaged over the daylight period of the day

- input file "weathsetup.in" gains input for `"desc_rsds"`
- struct "SW_WEATHER" gains element `desc_rsds`
- `SW_WTH_setup()` now reads updated input file "weathsetup.in" and populates `desc_rsds` of `SW_Weather`
- assign correct value for `SW_Weather.desc_rsds` in tests for DayMet, gridMET, and MACA data sets to complete specifications -- even if `SW_Weather.desc_rsds` is currently unused

--- a/tests/example/Input/weathsetup.in
+++ b/tests/example/Input/weathsetup.in
@@ -41,7 +41,17 @@
 0			# Specific humidity [%]
 0			# Dew point temperature [C]
 0			# Actual vapor pressure [kPa]
-0			# Downward surface shortwave radiation [W/m2], i.e., flux density for a (hypothetical) flat horizon averaged over the daylight period of the day
+0			# Downward surface shortwave radiation (see `Daily weather input descriptions`)
+
+
+#--- Daily weather input descriptions
+0			# Description of downward surface shortwave radiation
+			#   * 0: `rsds` represents daily global horizontal irradiation [MJ / m2]
+			#   * 1: `rsds` represents flux density [W / m2] for a
+			#        (hypothetical) flat horizon averaged over an entire day (24 hour period)
+			#   * 2: `rsds` represents flux density [W / m2] for a
+			#        (hypothetical) flat horizon averaged over the daylight period of the day
+
 
 #--- Monthly scaling parameters:
 # Month 1 = January, Month 2 = February, etc.
