GHA: shuffle and repeat tests 3x
- new make target "test_rep3rnd"

- shuffling and repeating tests checks that unit tests are self-sufficient and don't have undesired side-effects compromising other tests

- see also `make test_reprnd` target where tests are rep[eated] r[a]nd[omly] until user interruption

--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -32,8 +32,8 @@ jobs:
         make clean bin_run
         make clean bin_debug_severe
 
-    - name: Unit tests
-      run: make clean test_run
+    - name: Unit tests (shuffle and repeat 3x)
+      run: make clean test_rep3rnd
 
     - name: Severe unit tests (without sanitizers)
       if: ${{ runner.os == 'macOS' }}
