--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -32,6 +32,11 @@ jobs:
         make clean bin_run
         make clean bin_debug_severe
 
+    - name: Run binary (with sanitizers)
+      # Apple clang does not support "AddressSanitizer: detect_leaks" (at least as of clang-1200.0.32.29)
+      if: ${{ runner.os != 'macOS' }}
+      run: make clean bin_leaks
+
     - name: Unit tests (shuffle and repeat 3x)
       run: make clean test_rep3rnd
 
