--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -40,6 +40,11 @@ jobs:
     - name: Unit tests (shuffle and repeat 3x)
       run: make clean test_rep3rnd
 
+    - name: Unit tests (seed 19456)
+	run: |
+	  CC=clang CXX=clang++ make clean_test test
+	  bin/sw_test --gtest_shuffle --gtest_random_seed=19456
+
     - name: Severe unit tests (without sanitizers)
       if: ${{ runner.os == 'macOS' }}
       run: make clean test_severe
