Fix Windows new GHA test

--- a/.github/workflows/main_win.yml
+++ b/.github/workflows/main_win.yml
@@ -47,5 +47,5 @@ jobs:
 
     - name: Unit tests (seed 2998)
       run: |
-       CC=clang CXX=clang++ make clean_test test
-       bin/sw_test --gtest_shuffle --gtest_random_seed=2998
+        make clean_test test
+        bin/sw_test --gtest_shuffle --gtest_random_seed=2998
