--- a/.github/workflows/main_win.yml
+++ b/.github/workflows/main_win.yml
@@ -54,3 +54,8 @@ jobs:
       run: |
         make clean_test test
         bin/sw_test --gtest_shuffle --gtest_random_seed=2998
+
+    - name: Unit tests (seed 71212)
+      run: |
+        make clean_test test
+        bin/sw_test --gtest_shuffle --gtest_random_seed=71212
