Add 50 shuffle tests to Cygwin and _nix GHA

--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -59,6 +59,11 @@ jobs:
         make clean_test test
         bin/sw_test --gtest_shuffle --gtest_random_seed=92968
 
+    - name: Unit tests (50 shuffle)
+      run: |
+        make clean_test test
+        bin/sw_test --gtest_shuffle --gtest_repeat=50
+
 
   check_code_coverage:
     runs-on: ubuntu-latest
