--- a/.github/workflows/main_win.yml
+++ b/.github/workflows/main_win.yml
@@ -64,3 +64,8 @@ jobs:
       run: |
         make clean_test test
         bin/sw_test --gtest_shuffle --gtest_random_seed=40913
+
+    - name: Unit tests (50 shuffle)
+      run: |
+        make clean_test test
+        bin/sw_test --gtest_shuffle --gtest_repeat=50
